// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`applies correct styles based on type 1`] = `
<Text
  style={
    [
      {
        "color": "#000",
      },
      undefined,
      {
        "fontSize": 32,
        "fontWeight": "bold",
        "lineHeight": 32,
      },
      undefined,
      undefined,
      undefined,
      undefined,
    ]
  }
>
  Title
</Text>
`;

exports[`renders correctly 1`] = `
<Text
  style={
    [
      {
        "color": "#000",
      },
      {
        "fontSize": 16,
        "lineHeight": 24,
      },
      undefined,
      undefined,
      undefined,
      undefined,
      undefined,
    ]
  }
>
  Snapshot test!
</Text>
`;
